--- a/index.qmd
+++ b/index.qmd
@@ -35,7 +35,7 @@ format:
     code-link: true
     css: custom.css
     embed-resources: false
-    footer: "Boundary Corrected Adaptive CKDE | <https://jeffreyracine.github.io/bk>"
+    footer: "Boundary Corrected Adaptive CKDE | [JeffreyRacine.github.io/bk](https://JeffreyRacine.github.io/bk)"
     ## This "hack" is exclusive to using mathjax and allows for plain vanilla
     ## equation cross referencing using any LaTeX math environment such as
     ## align, equation, split, etc., i.e., \label{eqfoo} and \eqref{eqfoo} (it
@@ -103,7 +103,7 @@ library(pglm)
 
 -   I am aiming for an interactive seminar format, which will require either your participation or your sitting next to someone who is participating.
 
--   Hopefully you came with your laptop, the Firefox browser, R/RStudio, and the suggested libraries installed (if you have your laptop you can do this now if you didn't get the [memo](https://jeffreyracine.github.io/bk/prelim.html)).
+-   Hopefully you came with your laptop, the Firefox browser, R/RStudio, and the suggested libraries installed (if you have your laptop you can do this now if you didn't get the [memo](https://JeffreyRacine.github.io/bk/prelim.html)).
 
 -   If you have R/RStudio and the libraries installed, you can work with the methods and data interactively as the talk proceeds.
 
@@ -111,7 +111,7 @@ library(pglm)
 
 -   Let's begin by opening the following link in Firefox:
 
-    <https://jeffreyracine.github.io/bk>
+    [JeffreyRacine.github.io/bk](https://JeffreyRacine.github.io/bk)
 
 ## Overview of Talk
 
@@ -126,7 +126,7 @@ library(pglm)
 
 -   An R package is available at:
 
-    <https://github.com/JeffreyRacine/bkcde>
+    [github.com/JeffreyRacine/bkcde](https://github.com/JeffreyRacine/bkcde)
 
 # Unconditional Density Estimation with Bounded Data
 
