Corrected Kiefer bibtex entry

--- a/index.bib
+++ b/index.bib
@@ -177,7 +177,7 @@ pages = {81-104},
 year  = {2010}}
 
 @ARTICLE{KIEFER_RACINE:2015,
-  AUTHOR = "Kiefer, N.\ M.\ and J.\ S.\ Racine",
+  AUTHOR = "Kiefer, N.M. and J.S. Racine",
   TITLE = "The Smooth Colonel and the Reverend Find Common Ground",
   JOURNAL = " Econometric Reviews",
   VOLUME = " ",
@@ -185,7 +185,7 @@ year  = {2010}}
   PAGES = "(forthcoming)"}
  
 @ARTICLE{KIEFER_RACINE:2009,
-  AUTHOR = "Kiefer, N.\ M.\ and J.\ S.\ Racine",
+  AUTHOR = "Kiefer, N.M. and J.S. Racine",
   TITLE = "The Smooth Colonel Meets the Reverend",
   JOURNAL = "Journal of Nonparametric Statistics",
   VOLUME = "21",
